--- a/src/style.css
+++ b/src/style.css
@@ -169,23 +169,33 @@ body {
     padding: 0px 50px 0px 50px;
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-around;
+    align-content: flex-start;
+    overflow-y: scroll;
 }
 .classbox {
     display: flex;
     flex-direction: column;
     width: 300px;
     height: 200px;
+    margin: 10px;
     border-radius: 10px;
     box-shadow: 1px 1px 1px 1px wheat;
     background-color: white;
+    background-image: url("./img/team.png");
+    background-size: 300px 200px;
+    cursor: pointer;
+    order: 0;
 }
 .add {
+    background-image: none !important;
     justify-content: center;
     align-items: center;
     box-shadow: 0px 0px 0px 0px !important;
     background-color: whitesmoke;
     border: 7px dashed darkgreen;
     cursor: pointer;
+    order: 1 !important;
 }
 .add:hover {
     background-color: wheat;
@@ -193,4 +203,91 @@ body {
 }
 .add:active {
     background-color: whitesmoke;
+}
+
+/* classbox */
+.classtitle {
+    text-align: center;
+    font-weight: bold;
+}
+.classtitle > h2 {
+    font-size: 2rem;
+    margin: 0;
+}
+.remove {
+    display: flex;
+    justify-content: flex-end;
+    margin-bottom: 30px;
+}
+.remove > p {
+    font-size: 13px;
+    background-color: wheat;
+    color: white;
+    font-weight: bold;
+    border-radius: 4px 10px 4px 4px;
+    margin: 0;
+    text-align: center;
+    width: 30px;
+    height: 20px;
+    cursor: pointer;
+}
+.remove > p:hover {
+    background-color: coral;
+}
+
+/* CreateClass */
+.createclass {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    position: absolute;  
+    width: 500px;
+    height: 340px;
+    border-radius: 10px;  
+    background-color: white;
+    box-shadow: 2px 2px 2px 2px gray;
+  }
+.createclass > div:hover {
+    color: green;
+    font-weight: bold;
+}
+
+/* removeClass */
+.removeclass {
+    position: absolute;
+    top: 1%;
+    right: 2%;
+    border-radius: 10px;
+    width: 300px;
+    height: 125px;
+    background-color: darkgreen;
+    box-shadow: 2px 2px 2px 2px gray;
+}
+.removeclass h2 {
+    color: white;
+    text-align: center;
+}
+.buttonA {
+    font-size: 1.5rem;
+    font-weight: bold;
+    display: inline-block;
+    width: 120px;
+    height: 34px;
+    margin: 0px 15px 0px 15px;
+    text-align: center;
+    border-radius: 7px;
+}
+.one {
+    background-color: coral;
+    color: white;
+}
+.one:hover {
+    background-color: orangered;
+}
+.two {
+    background-color: green;
+    color: white;
+}
+.two:hover {
+    background-color: wheat;
 }
