--- a/src/style.css
+++ b/src/style.css
@@ -188,6 +188,8 @@ body {
     order: 0;
 }
 .add {
+    width: 286px;
+    height: 186px;
     background-image: none !important;
     justify-content: center;
     align-items: center;
@@ -268,7 +270,7 @@ body {
     width: 500px;
     height: 340px;
     background-color: white;
-    box-shadow: 2px 2px 2px 2px red;
+    box-shadow: 1px 1px 1px 1px lightcoral;
 }
 .removeclass h2 {
     color: black;
@@ -301,6 +303,7 @@ body {
     color: white;
     width: 200px;
     margin: 20px;
+    cursor: pointer;
 }
 .one:hover {
     background-color: orangered;
@@ -314,6 +317,7 @@ body {
     color: white;
     width: 200px;
     margin: 20px;
+    cursor: pointer;
 }
 .two:hover {
     background-color: wheat;
@@ -349,7 +353,7 @@ body {
     border-radius: 5px;
     margin: 5px 5px 5px 5px;
     cursor: pointer;
-    box-shadow: 1px 1px 1px 1px gray;
+    box-shadow: 0.5px 0.5px 0.5px 0.5px gray;
 }
 .teamunit:active {
     box-shadow: 0px 0px 0px 0px;
@@ -375,6 +379,10 @@ body {
 }
 .teamView {
     display: flex;
+    flex-direction: column;
+}
+.View {
+    display: flex;
     justify-content: center;
     width: 100%;
     margin-top: 30px;
@@ -384,13 +392,14 @@ body {
     flex-direction: column;
     align-items: center;
     width: 260px;
-    height: 50vh;
+    height: 55vh;
     background-color: white;
     border-radius: 7px;
     overflow-y: auto;
+    padding-top: 5px;
 }
 .classmanage {
-    width: 770px;
+    width: 70%;
     height: 60vh;
     margin: 0px 10px 0px 5px;
     background-color: snow;
@@ -419,5 +428,67 @@ body {
     font-size: 1rem;
 }
 .yet {
-    color: red;
+    color: coral;
+}
+.tt {
+    height: 270px !important;
+    top: 20%;
+    left: 37%;
+}
+.removeTeam {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    margin-top: 10px;
+}
+.delTeam {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 70%;
+    height: 50px;
+    margin-right: 10px;
+    margin-left: 5px;
+    background-color: lightcoral;
+    border-radius: 10px;
+    color: whitesmoke;
+    font-weight: bold;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    cursor: pointer;
+}
+.inviteTeam {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 50px;
+    width: 260px;
+    background-color: green;
+    color: whitesmoke;
+    border-radius: 10px;
+    font-weight: bold;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    cursor: pointer;
+}
+.delTeam > p {
+    margin: 0px;
+    font-size: 1.5rem;   
+}
+.delTeam:hover {
+    background-color: coral;
+}
+.delTeam:active {
+    box-shadow: 0.5px 0.5px 0.5px 0.5px gray;
+}
+.inviteTeam > p {
+    margin: 0px;
+    font-size: 1.5rem;
+}
+.inviteTeam:hover {
+    background-color: darkgreen;
+}
+.inviteTeam:active {
+    box-shadow: 0.5px 0.5px 0.5px 0.5px gray;
+}
+.re {
+    height: 200px;
 }
