--- a/src/style.css
+++ b/src/style.css
@@ -529,3 +529,33 @@ body {
 .notin:hover {
     background-color: lightgreen !important;
 }
+.addComment {
+    display: flex;
+    width: 100%;
+    height: 50px;
+    margin: 15px 0px 0px 0px;
+    justify-content: center;
+}
+.inputcomment {
+    width: 500px;
+    height: 40px;
+    border-radius: 10px;
+    border: none;
+    text-indent: 20px;
+    font-size: 20px;
+}
+.inputcomment:active {
+    outline: none;
+}
+.inputcomment:focus {
+    outline: none;
+}
+.submitcomment {
+    padding: 0;
+    border: none;
+    box-shadow: none;
+}
+.submitcomment:active {
+    border: none;
+    box-shadow: none;
+}
